tests/NormalTests/paczka1/small_fuzzy/28010163.err
Error in line 6: 9NyXFJX A926 78,0
Error in line 15: x2r A236 -1,1
